--- a/package.json
+++ b/package.json
@@ -5,22 +5,24 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open --port 3000 --contentBase --hot",
-    "build": "webpack"
+    "dev": "http-server -p 3000",
+    "build": "rollup -c rollup.config.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
+    "@webpack-cli/serve": "^2.0.5",
     "babel-loader": "^8.2.2",
     "babel-preset-env": "^1.7.0",
     "cryptojs": "^2.5.3",
     "jquery": "^3.5.1",
-    "webpack-dev-server": "^2.9.4"
+    "rollup-plugin-uglify": "^6.0.4"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "babel-polyfill": "^6.26.0"
+    "babel-polyfill": "^6.26.0",
+    "http-server": "^14.1.1"
   }
 }
